# SILLAGE-BLEU

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  turbo.json
.github/: create-issues.sh  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  good_first_issue.md
.github/workflows/: ci.yml
backend/api-gateway/: .eslintrc.json  package.json
backend/api-gateway/src/: index.ts
backend/api-gateway/src/__tests__/: fraudDetector.test.ts
backend/api-gateway/src/middleware/: auth.ts  errorHandler.ts
contracts/: Cargo.toml
contracts/blue-credit-minting/: Cargo.toml
contracts/blue-credit-minting/src/: lib.rs
contracts/catch-verification/: Cargo.toml
contracts/catch-verification/src/: lib.rs
contracts/esg-index/: Cargo.toml
contracts/esg-index/src/: lib.rs
contracts/scripts/: deploy_testnet.sh
contracts/settlement/: Cargo.toml
contracts/settlement/src/: lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
contracts/vessel-registry/: Cargo.toml
contracts/vessel-registry/src/: lib.rs
docs/: architecture.md  blue-credit-methodology.md  contract-examples.md  demo.md  developer-onboarding.md  esg-compliance.md  scf-submission.md  sms-guide.md  threat-model.md  vessel-onboarding.md
frontend/web/: next.config.js  package.json
infra/: docker-compose.yml
infra/docker/: api.Dockerfile
sdk/: package.json  tsconfig.json
sdk/src/: catch.ts  client.ts  credits.ts  index.ts  telemetry.ts  types.ts  vessel.ts
sdk/src/__tests__/: sdk.test.ts
(+23 files in other folders)
