[workspace]
members = [
    "vessel-registry",
    "catch-verification",
    "blue-credit-minting",
    "settlement",
    "esg-index",
    "shared",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
serde = { version = "1.0", default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
